Update kotlin version